# mcp-cmake

./: .gitignore  README.md  README_ja.md  mcp_cmake.py  pyproject.toml
mcp_cmake/: __init__.py  mcp_cmake_core.py  mcp_cmake_helpers.py  mcp_cmake_models.py  mcp_cmake_server.py  server.py
sample/: CMakeLists.txt  CMakePresets.json  main.cpp
test/integration/: test_mcp_server_integration.py
test/unit/: test_error_analyzer.py  test_health_check.py  test_mcp_server.py
