[project]
name = "mcp-cmake"
version = "0.1.0"
description = "MCP server for CMake project management using Gradio"
requires-python = ">=3.12"
dependencies = [
    "gradio[mcp]>=4.0",
]

[project.scripts]
mcp-cmake = "mcp_cmake:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0", # For mocking
    "packaging>=23.0", # For version comparison
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
