[project]
name = "mcp-cmake"
version = "0.1.0"
description = "MCP server for CMake project management using Gradio"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
]

[project.scripts]
mcp-cmake = "mcp_cmake.mcp_cmake_server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_cmake"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0", # For mocking
    "packaging>=23.0", # For version comparison
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
